# R34Clinux

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  start_r34.sh
.github/: FUNDING.yml  NAMING_CONVENTION.md
.github/agents/: r34-linux-client.agent.md
.github/workflows/: tests.yml
app/: package-lock.json  package.json
app/src/: App.jsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: api.rs  commands.rs  db.rs  downloader.rs  flaresolverr.rs  lib.rs  main.rs  tags_seed.json
app/src/components/: DetailModal.css  DetailModal.e2e.test.jsx  DetailModal.jsx  DetailModal.test.jsx  ErrorBoundary.jsx  MultiSelectToolbar.css  PostCard.css  Sidebar.jsx  Sidebar.test.jsx
app/src/tabs/: CollectionsTab.jsx  SearchTab.css  SearchTab.test.jsx  SettingsTab.jsx  SettingsTab.test.jsx
app/src/test/: setup.js
desktop/: package-lock.json  package.json  vite.config.js
desktop/src/: App.css  App.jsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: api.rs  commands.rs  db.rs  downloader.rs  flaresolverr.rs  lib.rs  main.rs  models.rs  mutations.rs  scraper.rs  settings.rs  sync.rs
desktop/src/components/: DetailModal.css  DetailModal.jsx  DetailModal.test.jsx  ErrorBoundary.test.jsx  MultiSelectToolbar.jsx  MultiSelectToolbar.test.jsx  PostCard.jsx  PostCard.test.jsx  Sidebar.css
desktop/src/tabs/: CollectionsTab.css  CollectionsTab.test.jsx  FavoritesTab.jsx  FavoritesTab.test.jsx  FriendsTab.css  FriendsTab.jsx  FriendsTab.test.jsx  SearchTab.jsx
desktop/src/test/: setup.js
scripts/: setup.sh  start_r34.sh
src/r34_client/: __init__.py  __main__.py  api.py  autocomplete.py  config.py  flaresolverr_client.py  flaresolverr_parsing.py  local_favorites.py  models.py  rate_limit.py
src/r34_client/api/: autocomplete.py  client.py  flaresolverr.py  hydration.py  (+4 more)
src/r34_linux_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scripts/: start_r34.sh
src/tests/: run_all.py  smoke_test_v4.py  test_api_autocomplete.py  test_api_client.py  test_api_flaresolverr_client.py  test_api_flaresolverr_core.py  test_api_flaresolverr_launcher.py  test_api_flaresolverr_parsing.py  test_api_hydration.py  test_api_scraping.py  test_api_urls.py  test_client_state.py  test_core_db.py  test_core_download_manager.py  test_core_models.py  test_core_rate_limit.py  test_core_settings.py  test_core_settings_validation.py  test_core_state.py  test_core_workers.py  test_diagnostics.py  test_downloads.py  test_favorites_sync.py  test_flaresolverr_client.py  test_image_fit.py  test_local_favorites.py  test_models.py  test_preview_fetcher.py  test_rate_limit.py  test_search_v3.py  test_status.py  test_sync_favorites.py  test_sync_pending_mutations.py  test_sync_pending_mutations_persistence.py  test_ui_diagnostics.py  test_ui_downloads.py  test_ui_favorites_actions.py  test_ui_friends.py  test_ui_image_fit.py  test_ui_media_controls.py  (+9 more)
tests/: smoke_test_v2.py  test_api.py  test_diagnostics.py  test_favorites_sync.py  test_flaresolverr_client.py  test_image_fit.py  test_local_favorites.py  test_models.py  test_preview_fetcher.py  test_rate_limit.py  test_workers.py
(+96 files in other folders)
