[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r34-linux-client"
version = "0.1.0"
description = "Linux desktop client for rule34.xxx using the official API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "requests>=2.32",
  "python-vlc>=3.0.21203",
]

[project.scripts]
r34-linux-client = "r34_client.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
