[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r34-linux-client"
version = "1.3.0"
description = "Linux desktop client for rule34.xxx using the official API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Thenoix", email = "thenoix6@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
  "PySide6>=6.7",
  "requests>=2.32",
  "python-vlc>=3.0.21203",
]

[project.urls]
Homepage = "https://github.com/tnxnox/R34Clinux"
Repository = "https://github.com/tnxnox/R34Clinux"
"Bug Tracker" = "https://github.com/tnxnox/R34Clinux/issues"
"Say Thanks" = "https://ko-fi.com/thenoix"

[project.scripts]
r34-linux-client = "r34_client.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
exclude = [
  "src/tests/",
]
files = "src/r34_client/"

[tool.ruff.lint]
extend-select = ["N"]

[tool.ruff.lint.pep8-naming]
ignore-names = [
  "mousePressEvent",
  "keyPressEvent",
  "resizeEvent",
  "eventFilter",
  "closeEvent",
  "setUp",
  "setUpClass",
  "tearDown",
  "tearDownClass",
]
